package parcialSistemaDeCursosOnline;

import java.util.ArrayList;

public class CursoOnline {
	private String nombre;
	private String descripcion;
	private ArrayList<Valoracion> valoraciones;
	
}
