package parcialSistemaDeCursosOnline;

import java.time.LocalDate;

public class CursoOnlineEnVivo extends CursoOnline {
	private int cupoMaximoDeInscriptos;
	private LocalDate fechaDeInicio;
	private double porcentajeDebono;
	
}
