package parcialSistemaDeCursosOnline;

public class CursoOnlineGrabado extends CursoOnline{
	private double precio;
	
}
