package parcialSistemaDeCursosOnline;

import java.time.LocalDate;
import java.util.ArrayList;

public class Inscripcion {
	private LocalDate fechaDeInscripcion;
	private double montoPagado;
	private CursoOnline curso;
	
}
