package parcialSistemaDeCursosOnline;

import java.util.ArrayList;

public class SistemaDeCursosOnline {
	private ArrayList<Usuario> usuarios;
	private ArrayList<CursoOnline> cursosOnline;
	
	public SistemaDeCursosOnline() {
		this.cursosOnline = new ArrayList<>();
		this.usuarios = new ArrayList<>();
	}
	
	
}
