package parcialSistemaDeCursosOnline;

import java.util.ArrayList;

public class Usuario {
	private String nombre;
	private String email;
	private String clave;
	private ArrayList<Inscripcion> inscripciones;

	
	public Usuario() {
	}
	
	public void inscribirseAUnCurso(CursoOnline curso) {
		
	}
	
}
