package parcialSistemaDeCursosOnline;

import java.time.LocalDate;

public class Valoracion {
	private LocalDate fechaDeCreacion;
	private int puntaje;
	private String comentario;
}
